fixed z-index

--- a/src/style.css
+++ b/src/style.css
@@ -882,7 +882,7 @@ body > #demo-frame {
 }
 .console {
 	background: var(--color-bg);
-	z-index: 1; /* bring above iframe */
+	z-index: 5; /* bring above iframe */
 	position: absolute;
 	bottom: 0;
 	min-height: 80px;
